# vho

./: .gitignore
godot/: ML.gdextension  ML.gdextension.uid  Root.tscn  helicopter.gd  helicopter.gd.uid  project.godot  root.tscn
godot/addons/draw3d/: draw_3d.gd.uid  draw_3d_example.gd.uid  draw_3d_example.tscn  plugin.gd.uid
godot/models/: little-bird.glb  little-bird.glb.import  little-bird_helicp.png.import
godot/scenes/: Helicopter.tscn  Ring.tscn  debugger.gd  debugger.gd.uid  helicopter_player.gd  helicopter_player.gd.uid  little_bird.tscn  rotor.gd  rotor.gd.uid
postprocessing/: run.ipynb
python/: analysis.py  study.ipynb
rust/: Cargo.toml
rust/src/: agent.rs  game.rs  helicopter.rs  lib.rs  networks.rs  noise.rs  replay_buffer.rs  ring.rs  track.rs
rust/src/rl/: action.rs  adhdp.rs  agent.rs  episode.rs  mod.rs  networks.rs  replay.rs  replay_buffer.rs  reward.rs  state.rs
